<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_id"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_back_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start|center"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:gravity="center"
                android:text="@string/add_rating"
                android:theme="@style/FontTheme4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_back_id"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <Space
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/progressBar_id"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar_id"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_install_new_game_id"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/button_install_new_game_id"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_button_4"
                android:text="@string/add"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter_your_rate"
        android:textColor="@color/black"
        android:theme="@style/FontTheme3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13" />


    <EditText
        android:id="@+id/editText_your_rate_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_button_5"
        android:ems="10"
        android:hint="Ex.1500"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:theme="@style/FontTheme3_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/opponent1"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        android:text="@string/enter_opponent_s_rating"
        android:textColor="@color/black"
        android:theme="@style/FontTheme3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_your_rate_id" />


    <EditText
        android:id="@+id/editText_opponent_rate_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_button_5"
        android:ems="10"
        android:hint="Ex.1500"
        android:visibility="gone"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:theme="@style/FontTheme3_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponent1" />


    <TextView
        android:id="@+id/opponent"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter_opponent_name"
        android:textColor="@color/black"
        android:visibility="gone"
        android:theme="@style/FontTheme3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_opponent_rate_id" />

    <EditText
        android:id="@+id/editText_opponent_name_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_button_5"
        android:ems="10"
        android:hint="Ex.Johan"
        android:inputType="text"
        android:visibility="gone"
        android:maxLength="10"
        android:theme="@style/FontTheme3_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponent" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_9"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_id">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_button_7"
            android:text="@string/game_type"
            android:textStyle="bold"
            android:theme="@style/FontTheme3_1" />

        <Spinner
            android:id="@+id/spinner_game_type_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_button_2"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <ImageView
            android:id="@+id/imageView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_baseline_date_range_24"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/editText_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_7"
            android:inputType="date"
            android:hint="DD/MM/YYYY"
            android:padding="8dp"
            android:textStyle="bold"
            android:theme="@style/FontTheme3_2" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView44"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/the_data_is_in_any_game"
        android:visibility="gone"
        android:textColor="@color/black"
        android:theme="@style/FontTheme3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_opponent_name_id" />

    <RadioGroup
        android:id="@+id/radioGroup_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44">

        <RadioButton
            android:id="@+id/radioButton_Opening_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_5"
            android:onClick="radioButtonCheckOnClick"
            android:text="@string/opening"
            android:theme="@style/FontTheme3_0" />

        <RadioButton
            android:id="@+id/radioButton_middle_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_5"
            android:onClick="radioButtonCheckOnClick"
            android:text="@string/middle"
            android:theme="@style/FontTheme3_0" />

        <RadioButton
            android:id="@+id/radioButton_end_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_5"
            android:onClick="radioButtonCheckOnClick"
            android:text="@string/end"
            android:theme="@style/FontTheme3_0" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>